chore: don't stop CI if other nodejs versions failed

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   tests:
     strategy:
+      fail-fast: false
       matrix:
         node: [10, 12, 14, 16, 18, 20]
     runs-on: ubuntu-latest
