chore: trigger Nix CI if deps is updated

--- a/.github/workflows/ci-nix.yml
+++ b/.github/workflows/ci-nix.yml
@@ -9,6 +9,7 @@ on:
       - 'flake.*'
       - 'Makefile'
       - 'package.json'
+      - 'deps'
   pull_request:
     paths:
       - '.github/workflows/ci-nix.yml'
@@ -16,6 +17,7 @@ on:
       - 'flake.*'
       - 'Makefile'
       - 'package.json'
+      - 'deps'
   schedule:
     # Every 10:42 JST
     # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#schedule
