--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,7 @@ jobs:
           registry-url: 'https://wombat-dressing-room.appspot.com'
       - uses: mymindstorm/setup-emsdk@v7
         with:
+          # TODO: Use same as testing version
           version: 2.0.9
           no-cache: true
       - run: npm install
